It is now optional to add closing tag name.

--- a/rhtmlout.html
+++ b/rhtmlout.html
@@ -2,10 +2,24 @@
 <html>
 <head>
 <title>Hello world!</title>
+
 </head>
+
 <body>
-<h1>
-Hello
-</h1>
+<header>
+<h1>Hello</h1>
+
+<h2>This is my sample webpage.</h2>
+
+</header>
+
+
+<main>
+<p>How do you like my page?</p>
+
+</main>
+
 </body>
+
 </html>
+
